--- a/.github/workflows/arduino-compile-sketches-matrix-build.yml
+++ b/.github/workflows/arduino-compile-sketches-matrix-build.yml
@@ -28,7 +28,7 @@ jobs:
             fqbn: 'energia:msp430:MSP-EXP430FR4133LP'
             platform-name: 'energia:msp430'
             platform-sourceurl: 'https://raw.githubusercontent.com/Andy4495/TI_Platform_Cores_For_Arduino/main/json/package_energia_minimal_MSP_107_index.json'
-          - arch: msp-F5529
+          - arch: msp-FR6989
             fqbn: 'energia:msp430:MSP-EXP430FR6989LP'
             platform-name: 'energia:msp430'
             platform-sourceurl: 'https://raw.githubusercontent.com/Andy4495/TI_Platform_Cores_For_Arduino/main/json/package_energia_minimal_MSP_107_index.json'
