Add gcc9 to compile matrix

--- a/.github/workflows/arduino-compile-sketches.yml
+++ b/.github/workflows/arduino-compile-sketches.yml
@@ -20,9 +20,17 @@ jobs:
     strategy:
       matrix:
         include:
+          - arch: msp-G2-gcc9
+            fqbn: 'energia:msp430gcc9:MSP-EXP430G2553LP'
+            platform-name: 'energia:msp430gcc9'
+            platform-sourceurl: 'https://raw.githubusercontent.com/Andy4495/TI_Platform_Cores_For_Arduino/refs/heads/main/json/package_energia_minimal_msp430_index.json'
           - arch: msp-G2
             fqbn: 'energia:msp430:MSP-EXP430G2553LP'
             platform-name: 'energia:msp430'
+            platform-sourceurl: 'https://raw.githubusercontent.com/Andy4495/TI_Platform_Cores_For_Arduino/refs/heads/main/json/package_energia_minimal_msp430_index.json'
+          - arch: msp-FR4133-gcc9
+            fqbn: 'energia:msp430gcc9:MSP-EXP430FR4133LP'
+            platform-name: 'energia:msp430gcc9'
             platform-sourceurl: 'https://raw.githubusercontent.com/Andy4495/TI_Platform_Cores_For_Arduino/refs/heads/main/json/package_energia_minimal_msp430_index.json'
           - arch: msp-FR4133
             fqbn: 'energia:msp430:MSP-EXP430FR4133LP'
